# cpp_app_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: FetchContentExample.cmake  PrecompiledLibExample.cmake
docs/: CUSTOM_LIBRARIES.md
include/: utils.h
libs/my-math-lib/: CMakeLists.txt
libs/my-math-lib/include/mymath/: calculator.h
libs/my-math-lib/src/: calculator.cpp
scripts/: build.bat  build.sh  clean.bat  clean.sh  clean_all.bat  clean_all.sh  rebuild.bat  setup.bat  setup.sh
src/: main.cpp  utils.cpp
tools/cmake/: vcpkg-setup.cmake
